Afegeix el metode del controlador
