# api/api.yml
@@ -242,6 +242,74 @@ paths:
               examples:
                 errorExample:
                   $ref: '#/components/examples/error433'
+                  
+  /api/comments/{commentId}:
+    post:
+      tags: 
+      - comments
+      summary: Reply the comment identified by commentId
+      description: Returns the comment created
+
+      parameters: 
+      - name: commentId
+        in: path
+        description: ID of the comment that will be replied
+        required: true
+        schema:
+          type: integer
+          format: int64
+          
+      requestBody:
+        description: Provide the content of the comment
+        required: true
+        content:
+          application/json:
+            schema:
+              required:
+              - text
+              type: object
+              properties:
+                text:
+                  type: string
+                  example: 'This is an example comment'
+      
+        
+      responses:
+        201:
+          description: object created
+          content: 
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Comment'
+        400:
+          description: 'Error: Bad Request'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error400'
+        404:
+          description: 'Error: Not Found'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error404'
+        401:
+          description: 'Error: Unauthorized'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResult'
+              examples:
+                errorExample:
+                  $ref: '#/components/examples/error401'
+      security:
+      - ApiKeyAuth: []
                 
                   
   /api/users/{userId}:
@@ -284,72 +352,7 @@ paths:
                 $ref: '#/components/schemas/ErrorResult'
               examples:
                 errorExample:
-
                   $ref: '#/components/examples/error433'
-
-                  $ref: '#/components/examples/error410'
-                  
-  /api/comments/{commentId}:
-    post:
-      tags: 
-      - comment
-      summary: Reply the comment identified by commentId
-      description: Returns the comment created
-
-      parameters: 
-      - name: commentId
-        in: path
-        description: ID of the comment that will be replied
-        required: true
-        schema:
-          type: integer
-          format: int64
-          
-      requestBody:
-        description: Provide the content of the comment
-        required: true
-        content:
-          application/json:
-            schema:
-              required:
-              - text
-              type: object
-              properties:
-                text:
-                  type: string
-                  example: 'This is an example comment'
-      
-        
-      responses:
-        200:
-          description: succesful operation
-          content: 
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Comment'
-        404:
-          description: 'Error: Not Found'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error404'
-        401:
-          description: 'Error: Unauthorized'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResult'
-              examples:
-                errorExample:
-                  $ref: '#/components/examples/error401'
-      security:
-      - ApiKeyAuth: []
-    
-  
-
   /tweets/{tweetId}:
     get:
       tags:
@@ -684,4 +687,4 @@ components:
       type: apiKey
       name: X-API-KEY #Custom headers in rails apps must have the X- prefix
       in: header
-
+      
